#!/usr/bin/env python3
#
# Copyright 2022 Graviti. Licensed under MIT License.
#

[metadata]
name = graviti
version = attr: graviti.__version__
url = https://github.com/Graviti-AI/graviti-python-sdk
author = Graviti
author_email = pypi@graviti.com
license = MIT
license_file = LICENSE
keywords = graviti, dataset, DataFrame
description = Graviti Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy >= 1.16.0; python_version < '3.7'
    numpy >= 1.21.0; python_version == '3.7'
    numpy >= 1.22.0; python_version >= '3.8'
    filetype >= 1.0.8
    tensorbay >= 1.20.0
    urllib3 >= 1.15
    requests >= 2.4.2
    pyyaml >= 5.1
    pyarrow >= 3.0.0

[options.packages.find]
include = graviti*
exclude = *.tests

[options.package_data]
tensorbay =
    py.typed
